@@ -2375,12 +2375,23 @@ PyObject \*sipSelf
     Python object that wraps the the structure or class instance,
     i.e. ``self``.
 
-For example::
+bool sipSelfWasArg
+    This is only made available for non-abstract, virtual methods.  It is set
+    if ``self`` was explicitly passed as the first argument of the method
+    rather than being bound to the method.  In other words, the call was::
+
+        Klass.foo(self, ...)
+
+    rather than::
+
+        self.foo(...)
+
+The following is a complete example::
 
     class Klass
     {
     public:
-        int foo(SIP_PYTUPLE);
+        virtual int foo(SIP_PYTUPLE);
     %MethodCode
             // The C++ API takes a 2 element array of integers but passing a
             // two element tuple is more Pythonic.
@@ -2390,7 +2401,8 @@ For example::
             if (PyArg_ParseTuple(a0, "ii", &iarr[0], &iarr[1]))
             {
                 Py_BEGIN_ALLOW_THREADS
-                sipRes = sipCpp -> Klass::foo(iarr);
+                sipRes = sipSelfWasArg ? sipCpp -> Klass::foo(iarr)
+                                       : sipCpp -> foo(iarr);
                 Py_END_ALLOW_THREADS
             }
             else
@@ -2401,13 +2413,16 @@ For example::
     %End
     };
 
-Note the use of the fully scoped method name in the example (i.e.
-``Klass::foo()`` rather than just ``foo()``).  This is required for virtual
-methods [#]_ in order to avoid virtual call loops, but is a good habit to get
-into for all public methods.
+As the example is a virtual method [#]_, note the use of ``sipSelfWasArg`` to
+determine exactly which implementation of ``foo()`` to call.
 
 If a method is in the ``protected`` section of a C++ class then the call
 should instead be::
+
+    sipRes = sipCpp -> sipProtectVirt_foo(sipSelfWasArg, iarr);
+
+If a method is in the ``protected`` section of a C++ class but is not virtual
+then the call should instead be::
 
     sipRes = sipCpp -> sipProtect_foo(iarr);
 
